--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="#0000FF"
     android:gravity="center">
 
     <SeekBar
@@ -17,8 +18,9 @@
         android:id="@+id/imageView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="3"
-
+        android:layout_weight="1"
+        android:scaleType="centerCrop"
         android:adjustViewBounds="true"
+        android:background="#0000FF"
         android:src="@drawable/sample_image"/>
 </LinearLayout>
